--- a/hphp/composer.json
+++ b/hphp/composer.json
@@ -18,8 +18,17 @@
       "role": "Student"
     }
   ],
+  "repositories": {
+    "packagist": {
+      "type": "composer",
+      "url": "https://packagist.phpcomposer.com"
+    }
+  },
   "require": {
     "PHP": ">=5.3.0",
-    "smarty/smarty": "~3.1"
+    "smarty/smarty": "~3.1",
+    "filp/whoops": "*",
+    "symfony/var-dumper": "*",
+    "catfan/medoo": "*"
   }
 }
