--- a/hphp/.htaccess
+++ b/hphp/.htaccess
@@ -6,5 +6,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# otherwise forward it to index.php
+# otherwise forward it to add.php
 RewriteRule . index.php
